pkcs11: fix return value of method

Use the correct enum value instead of int.

https://bugzilla.gnome.org/show_bug.cgi?id=753698